# bevy_camera

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
camera_core/: Cargo.toml
camera_core/src/: lib.rs
camera_opencv/: Cargo.toml
camera_opencv/src/: camera_opencv.rs  lib.rs
config.d/: drivers.json  plugins.json
img_rcv_core/: Cargo.toml
img_rcv_core/src/: lib.rs
img_rcv_face/: Cargo.toml
marker_core/: Cargo.toml
marker_core/src/: lib.rs
plugin_core/: Cargo.toml
plugin_core/src/: lib.rs
