[workspace]
members = [ "app","camera_core", "camera_opencv", "img_rcv_core", "img_rcv_face", "marker_core", "plugin_core"]

resolver = "2"


[workspace.dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
bevy_reflect = "0.13.2"
opencv ={version="0.91" , default-features = false, features =[
	"alphamat",
	"aruco",
	"aruco_detector",
	"barcode",
	"bgsegm",
	"bioinspired",
	"calib3d",
	"ccalib",
	# "cudaarithm",
	# "cudabgsegm",
	# "cudacodec",
	# "cudafeatures2d",
	# "cudafilters",
	# "cudaimgproc",
	# "cudaobjdetect",
	# "cudaoptflow",
	# "cudastereo",
	# "cudawarping",
	"cvv",
	#"dnn",
	# "dnn_superres",
	"dpm",
	"face",
	"features2d",
	"flann",
	"freetype",
	"fuzzy",
	"gapi",
	"hdf",
	"hfs",
	"highgui",
	"img_hash",
	"imgcodecs",
	"imgproc",
	"intensity_transform",
	"line_descriptor",
	# "mcc",
	"ml",
	"objdetect",
	"optflow",
	"ovis",
	"phase_unwrapping",
	"photo",
	"plot",
	"quality",
	"rapid",
	"rgbd",
	"saliency",
	"sfm",
	"shape",
	"stereo",
	"stitching",
	"structured_light",
	"superres",
	"surface_matching",
	"text",
	"tracking",
	"video",
	"videoio",
	"videostab",
	"viz",
	"wechat_qrcode",
	"xfeatures2d",
	"ximgproc",
	"xobjdetect",
	"xphoto",
	"clang-runtime",
]}
pluginator = "1.0.1"
tokio = { version = "1.37.0", features = ["full"] }
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.21"
ndarray = {version = "0.15.6", features = ["rayon"]}
env_logger = "0.11.3"
serde = "1.0.200"
serde_json = "1.0.116"
