[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_reflect.workspace = true
camera_core = { version = "0.1.0", path = "../camera_core" }
json.workspace = true
ndarray.workspace = true
plugin_core = { version = "0.1.0", path = "../plugin_core" }
pluginator.workspace = true

env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true
bevy_editor_pls = "0.8.1"
bevy-tokio-tasks = {git = "https://github.com/fcb78/bevy-tokio-tasks.git"}
bevy_ecs.workspace = true


