[package]
name = "camera_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
bevy_reflect.workspace = true
pluginator.workspace = true
tokio.workspace = true
json.workspace = true

plugin_core = {path = "../plugin_core"}
opencv.workspace = true

ndarray.workspace = true